@@ -41,7 +41,7 @@ public class PermissionsIO {
 
   public PermissionsIO(Permissions permissions) {
     // TODO: This could be multiple entities post versioning
-    this.entityId = permissions.getEntities().get(0).getNumericId();
+    this.entityId = permissions.getEntities().getFirst().getNumericId();
     this.permissionType = permissions.getPermissionType();
     this.owner = permissions.getOwner() != null ? permissions.getOwner().getUsername() : null;
     this.reader = permissions.getReader().stream().map(User::getUsername).toArray(String[]::new);
