@@ -91,7 +91,7 @@ public class BaseTestCaseIT {
   }
 
   protected static DataObjectIO createDataObject(String name, long collectionId, UserWithApiKey user) {
-    var dataObjectsURL = String.format("/%s/%d/%s/", Constants.COLLECTIONS, collectionId, Constants.DATA_OBJECTS);
+    var dataObjectsURL = "/%s/%d/%s/".formatted(Constants.COLLECTIONS, collectionId, Constants.DATA_OBJECTS);
     var dataObjectSpecification = new RequestSpecBuilder()
       .setContentType(ContentType.JSON)
       .addHeader("X-API-KEY", user.getApiKey().getJws())
